Added initial streaming logic

--- a/config/kafka.properties
+++ b/config/kafka.properties
@@ -1,9 +1,15 @@
 [kafka]
+cassandra.host.name:ec2-18-235-39-97.compute-1.amazonaws.com
+cassandra.trip.keyspace:trip_batch
+cassandra.trip_stats_table:trip_stats
+driver_medallion:medallion_driver_assignment
+nyc_borough=data/boroughboundaries.geojson
 s3_bucket:scdi-data
-s3_key:test.txt
+s3_key:for_kafka.csv
 broker_ips:ec2-35-171-12-195.compute-1.amazonaws.com:9092,ec2-34-224-105-73.compute-1.amazonaws.com:9092,ec2-34-195-6-126.compute-1.amazonaws.com:9092,ec2-34-227-185-70.compute-1.amazonaws.com:9092
 zookeeper_ips:ec2-35-171-12-195.compute-1.amazonaws.com:2181,ec2-34-224-105-73.compute-1.amazonaws.com:2181,ec2-34-195-6-126.compute-1.amazonaws.com:2181,ec2-34-227-185-70.compute-1.amazonaws.com:2181
-topic:mytopic
-partitions:3
-replication_factor:2
+topic:trips
+partitions:2
+replication_factor:3
 retention:3600000
+interval:1
