Added spark streaming logic

--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 [prod]
 spark.master:spark://ec2-35-171-12-195.compute-1.amazonaws.com:7070
-s3_url:s3n://scdi-data/
+s3_url:s3n://scdi-data/test.csv
 nyc_borough:data/boroughboundaries.geojson
 cassandra.host.name:ec2-18-235-39-97.compute-1.amazonaws.com
 cassandra.trip.keyspace:trip_batch
