--- a/config/application.properties
+++ b/config/application.properties
@@ -1,7 +1,18 @@
 [prod]
 spark.master:spark://ec2-35-171-12-195.compute-1.amazonaws.com:7070
-s3_url:s3n://scdi-data/
+batch_s3_url:s3n://scdi-data/
+kafka_s3_bucket:scdi-data-kafka
+kafka_s3_key:trip_data_5_part.csv
 nyc_borough:data/boroughboundaries.geojson
 cassandra.host.name:ec2-18-235-39-97.compute-1.amazonaws.com
 cassandra.trip.keyspace:trip_batch
 cassandra.trip_stats_table:trip_stats
+cassandra.real_trip_table:real_trip
+cassandra.real_trip_stats_table:real_trip_stats
+broker_ips:ec2-35-171-12-195.compute-1.amazonaws.com:9092,ec2-34-224-105-73.compute-1.amazonaws.com:9092,ec2-34-195-6-126.compute-1.amazonaws.com:9092,ec2-34-227-185-70.compute-1.amazonaws.com:9092
+zookeeper_ips:ec2-35-171-12-195.compute-1.amazonaws.com:2181,ec2-34-224-105-73.compute-1.amazonaws.com:2181,ec2-34-195-6-126.compute-1.amazonaws.com:2181,ec2-34-227-185-70.compute-1.amazonaws.com:2181
+topic:trips
+partitions:2
+replication_factor:3
+retention:3600000
+interval:1
