--- a/config/application.properties
+++ b/config/application.properties
@@ -4,6 +4,7 @@ batch_s3_url:s3n://scdi-data/
 kafka_s3_bucket:scdi-data-kafka
 kafka_s3_key:trip_data_5_part.csv
 nyc_borough:data/boroughboundaries.geojson
+nyc_zones:data/taxi_zone_lookup.csv
 cassandra.host.name:ec2-18-235-39-97.compute-1.amazonaws.com
 cassandra.trip.keyspace:trip_batch
 cassandra.trip_stats_table:trip_stats
@@ -15,4 +16,4 @@ topic:trips
 partitions:2
 replication_factor:3
 retention:3600000
-interval:1
+interval:60
