--- a/config/application.properties
+++ b/config/application.properties
@@ -1,12 +1,13 @@
 [prod]
 spark.master:spark://ec2-35-171-12-195.compute-1.amazonaws.com:7070
-batch_s3_url:s3n://scdi-data/
+batch_s3_url:s3n://scdi-data/yellow_tripdata_2017-07.csv
 kafka_s3_bucket:scdi-data-kafka
 kafka_s3_key:trip_data_5_part.csv
 nyc_borough:data/boroughboundaries.geojson
 nyc_zones:data/taxi_zone_lookup.csv
 cassandra.host.name:ec2-18-235-39-97.compute-1.amazonaws.com
 cassandra.trip.keyspace:trip_batch
+cassandra.trip_data_table:trip_data
 cassandra.trip_stats_table:trip_stats
 cassandra.real_trip_table:real_trip
 cassandra.real_trip_stats_table:real_trip_stats
