--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 [prod]
 spark.master:spark://ec2-35-171-12-195.compute-1.amazonaws.com:7070
-batch_s3_url:s3n://scdi-data/yellow_tripdata_2017-07.csv
+batch_s3_url:s3n://scdi-data/
 kafka_s3_bucket:scdi-data-kafka
 kafka_s3_key:trip_data_5_part.csv
 nyc_borough:data/boroughboundaries.geojson
