--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,12 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-    echo $(NAME)
-  displayName: 'Run a multi-line script'
+stages:
+- stage: provision_devtest
+  jobs:
+  - job: dev
+    steps: 
+    - script: |
+        echo Add other tasks to build, test, and deploy your project.
+        echo See https://aka.ms/yaml
+        echo $(NAME)
